fix  Lawyer gets